update property search and transaction results