@@ -5,6 +5,7 @@ import services.FileHandler;
 import view.TransactionView;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class TransactionController {
 
@@ -18,13 +19,12 @@ public class TransactionController {
         this.fileHandler = FileHandler.getInstance(); // Initialize the FileHandler
     }
 
-    // Fetch transactions for a specific project from the file
+    // Fetch transactions for a specific project from the file (default functionality)
     public List<Transaction> fetchTransactions(String projectName) {
         List<Transaction> allTransactions = fileHandler.loadTransactionsFromCSV();
         List<Transaction> projectTransactions = allTransactions.stream()
-                // Normalize both the input and project name from the file for case-insensitive comparison
                 .filter(transaction -> transaction.getProjectName().trim().equalsIgnoreCase(projectName.trim()))
-                .toList();
+                .collect(Collectors.toList());
 
         // Debugging: Check how many transactions were loaded and matched
         System.out.println("Loaded " + allTransactions.size() + " transactions from CSV.");
@@ -33,4 +33,19 @@ public class TransactionController {
         return projectTransactions.size() > 5 ? projectTransactions.subList(0, 5) : projectTransactions;
     }
 
+    // Fetch the last N transactions for a specific project (new feature)
+    public List<Transaction> fetchRecentTransactions(String projectName, int limit) {
+        List<Transaction> allTransactions = fileHandler.loadTransactionsFromCSV();
+        List<Transaction> projectTransactions = allTransactions.stream()
+                .filter(transaction -> transaction.getProjectName().trim().equalsIgnoreCase(projectName.trim()))
+                .collect(Collectors.toList());
+
+        // Debugging: Check how many transactions were loaded and matched
+        System.out.println("Loaded " + allTransactions.size() + " transactions from CSV.");
+        System.out.println("Found " + projectTransactions.size() + " transactions for project: " + projectName);
+
+        // Return only the last 'limit' number of transactions, if available
+        int transactionCount = projectTransactions.size();
+        return projectTransactions.subList(Math.max(transactionCount - limit, 0), transactionCount);
+    }
 }
